@@ -246,6 +246,9 @@ package or when debugging this package.\
 #	The directory where buildroots will be created.
 %_buildrootdir		@BUILDROOTDIR_MACRO@
 
+#       Build root path, where %install installs the package during build.
+%buildroot              %{_buildrootdir}/%{name}-%{version}-%{release}.%{_arch}
+
 #	Directory where temporaray files can be created.
 %_tmppath		%{_var}/tmp
 %tmpdir			%{_tmppath}
@@ -258,10 +261,6 @@ package or when debugging this package.\
 #	Macros that are initialized as a side effect of spec
 #	file parsing.
 #
-#	Build root path, where %install installs the package during build.
-#
-%buildroot		%{_buildrootdir}/%{name}-root
-
 #	The sub-directory (relative to %{_builddir}) where sources are compiled.
 #	This macro is set after processing %setup, either explicitly from the
 #	value given to -n or the default name-version.
