@@ -1,5 +1,9 @@
 
 5.2a3 -> 5.2a4:
+    - proyvind: change %buildroot to %{_buildrootdir}/%{name}-%{version}-%{release}.%{_arch}
+	to make it more unique and informative.
+    - proyvind: do lazy mkdir of %_builddir, %_rpmdir & %_srcrpmdir when doing
+	--install for src.rpms as well.
     - jbj: yarn: convert Header refcount to usage mutex.
     - jbj: zlog: rework trace log with a refcount mutex instead.
     - proyvind: do lazy mkdir of %_topdir, %_builddir, %_rpmdir & %_srcrpmdir
